# tracing-live

./: .gitignore  Cargo.toml  Dockerfile  README.md
bins/server/: Cargo.toml  build.rs  sql.sql
bins/server/bindings/: AppLatestInfoDto.ts  AppLatestRunInfoDto.ts  TracingRecordDto.ts
bins/server/cert/: server.key  server.pem
bins/server/src/: dyn_query.rs  event_service.rs  global_data.rs  grpc_service.rs  lib.rs  main.rs  record.rs  related_event.rs  running_app.rs  setting_service.rs  tracing_service.rs  web_service.rs
crates/core/: Cargo.toml  build.rs
crates/core/proto/: tracing.proto
crates/core/src/: catch_panic.rs  flags.rs  generated_proto.rs  lib.rs  tonic.rs  tracing.rs  tracing_layer.rs
crates/entity/: Cargo.toml  README.md
crates/entity/src/: app.rs  app_build.rs  app_run.rs  lib.rs  prelude.rs  setting.rs  tracing_record.rs  tracing_span.rs  tracing_span_enter.rs  tracing_span_parent.rs  tracing_span_run.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: tracing.proto
crates/proto/src/: flags.rs  generated_tracing.rs  lib.rs  tracing_layer.rs
examples/case-test/: Cargo.toml
examples/case-test/src/: main.rs
examples/playground/: Cargo.toml
examples/playground/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
libs/client/: Cargo.toml
libs/client/src/: client.rs  futures.rs  lib.rs  persistence.rs  reconnect_and_persistence.rs  tokio.rs
web/: .editorconfig  .gitignore  eslint.config.js  farm.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  ui.config.json
web/src/: app.tsx  cache.ts  consts.ts  http_client.ts  i18n-resources.json  index.css  index.tsx  utils.ts
web/src/components/: ConditionBuilder.tsx  Counter.tsx  Empty.tsx  Loading.tsx  loading.module.css
web/src/components/ui/: button.tsx  checkbox.tsx  label.tsx  select.tsx  switch.tsx  tooltip.tsx
web/src/lib/: use_records_live.ts
web/src/openapi/: runtime.ts
web/src/openapi/.openapi-generator/: FILES
web/src/openapi/apis/: DefaultApi.ts
web/src/openapi/models/: AppLatestInfoDto.ts  AppNodeRunDto.ts  AppRunDto.ts  CursorInfo.ts  ListRecordsParentSpanTIdParameter.ts  ListRecordsParentTIdParameter.ts  ListRecordsSpanTIdParameter.ts  NodePageEvent.ts  NodePageEventOneOf.ts  NodePageEventOneOf1.ts  NodePageEventOneOf1NodeAppStart.ts  NodePageEventOneOf2.ts  NodePageEventOneOf2NodeAppStop.ts  NodesPageDto.ts  PageAppDto.ts  PageDto.ts  PageNodeDto.ts  TLBinOp.ts  TracingKind.ts  TracingLevel.ts  TracingRecordDto.ts  TracingRecordFieldFilter.ts  TracingRecordScene.ts  TracingSpanEnterDto.ts  TracingSpanRunDto.ts  TracingTreeEndDto.ts  TracingTreeRecordDto.ts  TracingTreeRecordVariantDto.ts  TracingTreeRecordVariantDtoOneOf.ts  TracingTreeRecordVariantDtoOneOf1.ts  TracingTreeRecordVariantDtoOneOf2.ts  index.ts
web/src/routes/: app-select.tsx  index.tsx  not-found.tsx  overview.tsx  traces.tsx
