[package]
name = "tracing-lv-server"
version = "0.1.0"
edition = "2021"

[dependencies]
#x_util = { path = "../../../x_util" }
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hashbrown = "0.15"
rust-embed = "8.5.0"
mime_guess = "2"
bitflags = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["time"] }
tracing-lv-core = { path = "../../crates/core", features = ["server","std"], version = "0.0.1-beta.3" }
axum = { version = "0.7", features = ["http2", "json", "form", "multipart", "query", "tracing", "tokio", "tower-log", "matched-path"], default-features = false }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
tonic = { version = "0.12", features = ["server", "zstd"] }
tonic-web = { version = "0.12" }
#tonic-health = { version = "0.12" }
#prost = "0.13"
#prost-types = "0.13"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "tracing", "cors", "compression-full", "decompression-full"] }
#tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
#postgres-types = { version = "0.2", features = ["derive"] }
flume = "0.11"
smol_str = { version = "0.2", features = ["serde"] }

entity = { path = "../../crates/entity" }

sea-orm = { version = "1.1", default-features = false, features = ["sqlx-postgres", "runtime-tokio", "serde_json", "with-bigdecimal", "with-uuid", "with-json", "with-chrono", "runtime-tokio-rustls"] }

smallvec = { version = "1", features = ["serde"] }

chrono = "0.4"
serde = "1"
serde_json = "1"
futures-util = "0.3"
lru = "0.12"
uuid = { version = "1", features = ["v4"] }

utoipa = { version = "5", features = ["chrono", "uuid", "axum_extras", "decimal", "url", "openapi_extensions", "smallvec"] }
utoipa-swagger-ui = { version = "8", features = ["axum", "vendored"], default-features = false }
utoipa-axum = { version = "0.1" }

serde_qs = { version = "0.13" }
sea-query-binder = "0.7"
anyhow = "1"
sea-orm-migration = "1"
http-body-util = "0.1.2"
futures = "0.3.31"
derive_more = { version = "1", features = ["full"] }
bon = "3"
#utoipa-redoc = { version = "5", features = ["axum"] }
#utoipa-rapidoc = { version = "5", features = ["axum"] }
#utoipa-scalar = { version = "0.2", features = ["axum"] }

shadow-rs = "0.37"

[build-dependencies]
shadow-rs = "0.37"