[package]
name = "tracing-lv-proto"
version = "0.0.1-beta.3"
edition = "2021"
description = "Track your apps in real time"
license = "MIT"

[features]
client = []
server = []

[dependencies]
tonic = { version = "0.12", features = ["prost", "codegen"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
flume = "0.11"

smol_str = { version = "0.2", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
prost = "0.13"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
#[build-dependencies]
#tonic-build = { version = "0.12", features = ["prost"] }