[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
#tracing-lv = { version = "0.0.1-beta.3" }
tracing-lv = { version = "0.0.1-beta.3", path = "../../libs/client" }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
futures-util = "0.3"

rand = "0.8"
bytes = "1"