[package]
name = "tracing-lv"
version = "0.0.1-beta.3"
edition = "2021"
description = "Track your apps in real time"
license = "MIT"

[features]
default = ["dep:tokio", "dep:tracing-lv-core", "dep:tonic", "dep:tower", "dep:hyper", "dep:hyper-util"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
smol_str = { version = "0.2", features = ["serde"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
flume = "0.11"
serde = { version = "1.0.204", features = ["derive", "std"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
tokio = { version = "1", optional = true, features = ["io-util", "fs"] }
tracing-lv-core = { path = "../../crates/core", optional = true, features = ["client", "std"], version = "0.0.1-beta.3" }
tonic = { version = "0.12", optional = true, features = ["zstd", "channel"] }
tower = { version = "0.5", optional = true }
hyper = { version = "1.4", features = ["client"], optional = true }
hyper-util = { version = "0.1", optional = true }

pin-project = "1"
tracing-core = "0.1"
bytes = "1.9.0"
zstd = "0.13"
binrw = {version = "0.14"}
rmp-serde = "1.3"